Настроил сваггер, и докер
