# server/app/config/swagger.yml
@@ -1,10 +1,18 @@
-openapi: 3.0.0
+openapi: 3.0.3
 info:
   title: ZStore API
   version: 1.0.0
   description: Документация API для ZStore
 servers:
   - url: http://localhost:5000
+components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+security:
+  - bearerAuth: []
 paths:
   /api/register:
     post:
@@ -58,7 +66,6 @@ paths:
       responses:
         200:
           description: Корзина пользователя
-  /api/cart:
     post:
       summary: Добавить товар в корзину
       security:
