# server/app/server.js
@@ -1,15 +1,12 @@
 import cors from 'cors';
 import express from 'express';
 import swaggerUi from 'swagger-ui-express';
-import swaggerSpec from './config/swaggerConfig.js'
 import fs from 'fs';
-import yaml from 'js-yaml';
-import errorHandler from './middlewares/errorHandler.js'
 import userRoutes from './routes/user.routes.js';
 import dotenv from 'dotenv';
 import { fileURLToPath } from 'url';
 import path from 'path'
-import authMiddleware from './middlewares/authMiddlewares.js';
+import yaml from 'js-yaml';
 
 dotenv.config();
 const app = express();
@@ -17,13 +14,13 @@ const app = express();
 const __filename = fileURLToPath(import.meta.url);
 const __dirname = path.dirname(__filename);
 const swaggerPath = path.join(__dirname, 'config', 'swagger.yml');
-const swaggerDocument = fs.readFileSync(swaggerPath, 'utf-8');
+const swaggerDocument = yaml.load(fs.readFileSync(swaggerPath, 'utf8'));
+
 // Middleware
 
 app.use(cors());
 app.use("/api", userRoutes);
 app.use(express.json({ limit: '100mb' }));
-app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 app.use('/api/docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // Сначала раздача картинок
@@ -34,7 +31,7 @@ app.use(express.static(path.join(__dirname, 'client', 'build')));
 
 // Потом SPA fallback
 app.get('*', (_req, res) => {
-  res.sendFile(path.join(__dirname,'server','client', 'build', 'index.html'));
+  res.sendFile(path.join(__dirname,'client', 'build', 'index.html'));
 });
 
 const PORT = process.env.PORT;
